plugins {
    id("java")
    id("io.papermc.paperweight.userdev") version "2.0.0-beta.17"
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21
group = project.group
defaultTasks "rebuild"

compileJava {
    options.encoding = "UTF-8"
    options.compilerArgs += ["-parameters"]
}

repositories {
    gradlePluginPortal()
    mavenCentral()
    mavenLocal()
    maven { url "https://repo.extendedclip.com/content/repositories/placeholderapi/" }
    maven { url "https://hub.spigotmc.org/nexus/content/repositories/snapshots/" }
    maven { url "https://repo.papermc.io/repository/maven-public/" }
    maven { url "https://repo.codemc.io/repository/nms/" }
    maven { url "https://repo.dmulloy2.net/repository/public/" }
    maven { url "https://oss.sonatype.org/content/groups/public/" }
    maven { url "https://repo.essentialsx.net/releases/" }
    maven { url "https://maven.enginehub.org/repo/" }
    maven { url "https://jitpack.io" }
}

dependencies {
    implementation("com.sk89q.worldedit:worldedit-bukkit:7.2.0") { exclude group: 'org.spigotmc', module: 'spigot-api' }
    implementation("net.essentialsx:EssentialsX:2.20.1") { exclude group: 'org.spigotmc', module: 'spigot-api' }
    implementation("me.clip:placeholderapi:2.11.6")
    implementation("io.papermc.paper:paper-api:${project.minecraft_version}-R0.1-SNAPSHOT")
    paperweight.paperDevBundle("${project.minecraft_version}-R0.1-SNAPSHOT")
}

processResources {
    filesMatching('**/plugin.yml') {
        filter { line ->
            line.replaceAll("version: 1.0", "version: ${project.minecraft_version}")
        }
    }
}

clean {
    delete rootProject.buildDir
}

task rebuild {
    dependsOn clean
    finalizedBy build
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ['src/main/java', 'src/main/resources']
            exclude '**/*.java'
        }
    }
}

tasks {
    assemble {
        dependsOn(reobfJar)
    }

    compileJava {
        options.release.set(21)
    }

    reobfJar {
      outputJar.set(layout.buildDirectory.file("SMPTweaks.jar"))
    }
}